--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -3,6 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="public/FerryLogoOpaque.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="public/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="public/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="public/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="public/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="public/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="public/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="public/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="public/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="public/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="public/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <meta name="description" content="Veerdienst Ingen-Elst" />
     <meta
@@ -24,9 +40,17 @@
     <script type="module" src="src/stats.js"></script>
     <script type="module" src="src/overtochten.js"></script>
     <script type="module" src="/src/general/footer.js"></script>
-
+    <link rel="manifest" href="public/manifest.json" />
   </head>
   <body>
+    <script>
+      if (typeof navigator.serviceWorker !== 'undefined') {
+        navigator.serviceWorker.register('/service-worker.js')
+  .then(reg => console.log("Service Worker registered!", reg))
+  .catch(err => console.error("Service Worker registration failed:", err));
+      }
+    </script>
+    
     <nav>
       <div id="nav-left">
         <a href="/index.html"
